[gd_scene load_steps=3 format=3 uid="uid://ddeaiigwhd725"]

[ext_resource type="Script" path="res://Conveyor.gd" id="1_cb00k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0arse"]

[node name="Conveyor" type="Area2D"]
script = ExtResource("1_cb00k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_0arse")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(1, 0.0235294, 1, 1)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
